--- a/fractal/index.html
+++ b/fractal/index.html
@@ -70,7 +70,7 @@
   <body onload="webGLStart(5);" style="margin: 5px">
     <table>
       <tr>
-        <td rowspan="5">
+        <td rowspan="6">
           <canvas id="fractal-canvas" style="border: none;"></canvas>
         </td>
         <td align="center" width="100%">
@@ -141,6 +141,12 @@
             1
             <br/>
             b
+          </label>
+      </tr>
+      <tr>
+        <td align="center" width="100%">
+          <label>
+            <input type="button" id="bAuto" onclick="switchAuto();" value="Авто"/>
           </label>
       </tr>
     </table>
