--- a/fractal/index.html
+++ b/fractal/index.html
@@ -3,7 +3,7 @@
     <title>Fractal</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <script id="shader-fs" type="x-shader/x-fragment">
-      precision mediump float;
+      precision highp float;
 
       const int MAX_ITERATIONS = 100;
 
